syntax = "proto3";
package neutron.state_verifier.v1;

import "ibc/lightclients/tendermint/v1/tendermint.proto";

option go_package = "github.com/neutron-org/neutron/v6/x/state-verifier/types";

// Describes a "light" consensus state of the chain at a particular height
message ConsensusState {
  // Describes a block height for which the consensus height is saved
  int64 height = 1;

  // ConsensusState defines the consensus state from Tendermint
  ibc.lightclients.tendermint.v1.ConsensusState cs = 2;
}

// Defines the state verifier module's genesis state.
message GenesisState {
  repeated ConsensusState states = 1;
}
