syntax = "proto3";
package osmosis.tokenfactory.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "osmosis/tokenfactory/params.proto";
import "osmosis/tokenfactory/v1beta1/authorityMetadata.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/tokenfactory/types";

// Query defines the gRPC querier service.
service Query {
  // Params defines a gRPC query method that returns the tokenfactory module's
  // parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/osmosis/tokenfactory/v1beta1/params";
  }

  // DenomAuthorityMetadata defines a gRPC query method for fetching
  // DenomAuthorityMetadata for a particular denom.
  rpc DenomAuthorityMetadata(QueryDenomAuthorityMetadataRequest) returns (QueryDenomAuthorityMetadataResponse) {
    option (google.api.http).get =
      "/osmosis/tokenfactory/v1beta1/denoms/factory/{creator}/{subdenom}/"
      "authority_metadata";
  }

  // DenomsFromCreator defines a gRPC query method for fetching all
  // denominations created by a specific admin/creator.
  rpc DenomsFromCreator(QueryDenomsFromCreatorRequest) returns (QueryDenomsFromCreatorResponse) {
    option (google.api.http).get = "/osmosis/tokenfactory/v1beta1/denoms_from_creator/{creator}";
  }

  // BeforeSendHookAddress defines a gRPC query method for
  // getting the address registered for the before send hook.
  rpc BeforeSendHookAddress(QueryBeforeSendHookAddressRequest) returns (QueryBeforeSendHookAddressResponse) {
    option (google.api.http).get =
      "/osmosis/tokenfactory/v1beta1/denoms/factory/{creator}/{subdenom}/"
      "before_send_hook";
  }

  // FullDenom defines a gRPC query method for getting full denom name
  // from the creator and subdenom strings.
  rpc FullDenom(QueryFullDenomRequest) returns (QueryFullDenomResponse) {
    option (google.api.http).get = "/osmosis/tokenfactory/v1beta1/denoms/factory/{creator}/{subdenom}/full_denom";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryDenomAuthorityMetadataRequest defines the request structure for the
// DenomAuthorityMetadata gRPC query.
message QueryDenomAuthorityMetadataRequest {
  string creator = 1 [(gogoproto.moretags) = "yaml:\"creator\""];
  string subdenom = 2 [(gogoproto.moretags) = "yaml:\"subdenom\""];
}

// QueryDenomAuthorityMetadataResponse defines the response structure for the
// DenomAuthorityMetadata gRPC query.
message QueryDenomAuthorityMetadataResponse {
  DenomAuthorityMetadata authority_metadata = 1 [
    (gogoproto.moretags) = "yaml:\"authority_metadata\"",
    (gogoproto.nullable) = false
  ];
}

// QueryDenomsFromCreatorRequest defines the request structure for the
// DenomsFromCreator gRPC query.
message QueryDenomsFromCreatorRequest {
  string creator = 1 [(gogoproto.moretags) = "yaml:\"creator\""];
}

// QueryDenomsFromCreatorRequest defines the response structure for the
// DenomsFromCreator gRPC query.
message QueryDenomsFromCreatorResponse {
  repeated string denoms = 1 [(gogoproto.moretags) = "yaml:\"denoms\""];
}

// QueryBeforeSendHookAddressRequest defines the request structure for the
// BeforeSendHookAddress gRPC query.
message QueryBeforeSendHookAddressRequest {
  string creator = 1 [(gogoproto.moretags) = "yaml:\"creator\""];
  string subdenom = 2 [(gogoproto.moretags) = "yaml:\"subdenom\""];
}

// QueryBeforeSendHookAddressResponse defines the response structure for the
// BeforeSendHookAddress gRPC query.
message QueryBeforeSendHookAddressResponse {
  string contract_addr = 1 [(gogoproto.moretags) = "yaml:\"contract_addr\""];
}

// QueryFullDenomRequest defines the request structure for the
// FullDenom gRPC query.
message QueryFullDenomRequest {
  string creator = 1 [(gogoproto.moretags) = "yaml:\"creator\""];
  string subdenom = 2 [(gogoproto.moretags) = "yaml:\"subdenom\""];
}

// QueryFullDenomResponse defines the response structure for the
// FullDenom gRPC query.
message QueryFullDenomResponse {
  string full_denom = 1 [(gogoproto.moretags) = "yaml:\"full_denom\""];
}
